[package]
name = "avalanche-timestampvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-types = { version = "0.0.144", features = ["subnet", "codec_base64"] } # https://crates.io/crates/avalanche-types
base64 = { version = "0.13.1" }
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
env_logger = "0.10.0"
http-manager = { version = "0.0.4" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.17"
semver = "1.0.14"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89" # https://github.com/serde-rs/json/releases
serde_with = { version = "2.1.0", features = ["hex"] }
tokio = { version = "1.22.0", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.8.2", features = ["gzip"] }
